# MyGenCodeDesc-Copilot-Opus47

./: .gitignore  README.md  README_AlgABC.md  README_Protocol.md  README_UserGuide.md  README_UserGuide_ZH.md  README_ZH.md  pyproject.toml
Protocols/: genCodeDescProtoV26.03.json  genCodeDescProtoV26.04.json
scripts/: run_local_production_check.sh  run_system_demo.sh
src/aggregateGenCodeDesc/: __init__.py  (+2 more)
tests/: __init__.py  _git_fixture.py  test_ac_008_1_reference_scale.py  test_ac_008_2_streaming_scale.py  test_algorithm_a.py  test_algorithm_a_readme.md  test_algorithm_b.py  test_algorithm_b_readme.md  test_algorithm_c.py  test_algorithm_c_readme.md  test_cli_exception_guard.py  test_milestone_alga_cli.py  test_milestone_alga_cli_readme.md  test_milestone_algb_cli.py  test_milestone_algb_cli_readme.md  test_milestone_algc_cli.py  test_milestone_algc_cli_readme.md  test_packaging.py  test_scale_magnitude.py  test_scale_matrix_git_local.py  test_scale_matrix_git_remote.py  test_scale_matrix_svn_local.py  test_scale_matrix_svn_remote.py  test_scale_nonlinear_history.py  test_system_e2e_robust.py  test_transport_git_daemon.py  test_transport_svn_dav.py  test_us001_core_metric.py  test_us001_core_metric_readme.md  test_us002_file_level.py  test_us002_file_level_readme.md  test_us003_commit_level.py  test_us003_commit_level_readme.md  test_us004_line_level.py  test_us004_line_level_readme.md  test_us005_branch_history.py  test_us005_branch_history_readme.md  test_us005_shallow_and_submodule.py  test_us005_shallow_and_submodule_readme.md  test_us006_validation.py  (+17 more)
(+21 files in other folders)
